# rayzor

./: .dockerignore  .gitignore  ARRAY_POINTER_BUG.md  BACKLOG.md  BENCHMARK_PLAN.md  BLADE_FORMAT_SPEC.md  BLADE_IMPLEMENTATION_PLAN.md  CLI_COMPLETE.md  CLI_IMPLEMENTATION_COMPLETE.md  COMPLETED_TIERED_JIT.md  CONCURRENCY_SYNTAX_OPTIONS.md  CRANELIFT_RUNTIME_INTEGRATION_COMPLETE.md  Cargo.toml  DEAD_CODE_ANALYSIS_FINDINGS.md  FINAL_SESSION_SUMMARY.md  GENERIC_TYPE_ISSUE.md  INVESTIGATION_ARROW_FUNCTIONS.md  LIBC_INTEGRATION_AND_SRET_STATUS.md  MEMORY_MANAGEMENT.md  MIR_ENHANCEMENTS_COMPLETE.md  OPTIMIZATION_PLAN.md  PIPELINE_STATUS.md  PURE_RUST_STDLIB_COMPLETE.md  RAYZOR_CLI_COMPLETE.md  README.md  RUNTIME_ARCHITECTURE.md  SEND_SYNC_VALIDATION.md  SESSION_SUMMARY.md  SRET_IMPLEMENTATION_STATUS.md  STDLIB_MIR_BODIES_COMPLETE.md  STDLIB_MIR_COMPLETE.md  STDLIB_PARSER_COMPATIBILITY_PLAN.md  TEST_FAILURES_PLAN.md  TIERED_JIT_COMPLETE.md  VEC_U8_IMPLEMENTATION_STATUS.md  debug_switch.rs  example.hxml  example_compile.hxml  example_mixed.hxml  test.ast  (+2 more)
compiler/: ABSTRACT_METHOD_INLINING.md  ABSTRACT_TYPES_GUIDE.md  ABSTRACT_TYPES_RUNTIME_STATUS.md  ARCHITECTURE.md  ASYNC_AND_EXCEPTIONS.md  CLOSURE_IMPLEMENTATION.md  COMPLETE_COMPILER_STATUS.md  CONSTRUCTOR_BUG_FIX.md  CRANELIFT_JIT_STATUS.md  CRANELIFT_LOOP_DIAGRAMS.md  CRANELIFT_LOOP_QUICK_REFERENCE.md  CRANELIFT_LOOP_RESEARCH.md  Cargo.toml  ERROR_CODE_MIGRATION.md  FINAL_SESSION_SUMMARY.md  HASHLINK_TO_MIR_PLAN.md  HMR_ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  LOWERING_COMPLETION_SUMMARY.md  LOWERING_STATUS.md  NEXT_STEPS.md  OPERATOR_OVERLOADING_COMPLETE.md  OPERATOR_OVERLOADING_STATUS.md  OPERATOR_PATTERN_DETECTION.md  OPERATOR_PATTERN_PARSING_FINAL.md  PARSER_OPERATOR_SUPPORT.md  PATTERN_MATCHING_PLAN.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_SUMMARY.md  PRODUCTION_READINESS.md  RAYZOR_ARCHITECTURE.md  README.md  SEMANTIC_GRAPH_VS_TYPEFLOWGUARD.md  SESSION_2_SUMMARY.md  SESSION_3_SUMMARY_OLD.md  SESSION_4_ARRAY_ACCESS.md  SESSION_4_SUMMARY.md  SESSION_REPORT_2025_11_12.md  SESSION_SUMMARY.md  SSA_ARCHITECTURE.md  (+10 more)
compiler/benches/: type_system_bench.rs
compiler/docs/: MIR_SAFETY_ARCHITECTURE.md  dfg_builder_completion_guide.md  memory_safety_wiki.md
compiler/examples/: architecture_validation.rs  benchmark_bundle.rs  benchmark_runner.rs  check_preprocess.rs  debug_bytes_preprocess.rs  debug_complex_mir.rs  debug_method_call.rs  debug_static_var_mir.rs  dump_mir.rs  dump_tast_phi_bug.rs  import.hx  minimal_typeflow_test.rs  pipeline_demo.rs  repro_segfault.rs  static_var_loop_bug.rs  test_abstract_direct.rs  test_abstract_intermediate.rs  test_abstract_operators_runtime.rs  test_abstract_real_world.rs  test_abstract_simple_runtime.rs  test_abstract_types.rs  test_add_both.rs  test_add_fields.rs  test_add_y.rs  test_arithmetic.rs  test_arithmetic_nodiv.rs  test_array_access_execution.rs  test_array_class.rs  test_array_iteration.rs  test_array_methods_e2e.rs  test_array_mir.rs  test_arrow_capture.rs  test_benchmark_mandelbrot.rs  test_bundle_loading.rs  test_cc_debug.rs  test_cc_e2e.rs  test_circular_dependency.rs  test_class_boxing.hx  test_class_boxing.rs  test_class_method.rs  (+244 more)
compiler/haxe-std/: Array.hx  Iterator.hx  Math.hx  Std.hx  StdTypes.hx  String.hx  StringTools.hx  Sys.hx
compiler/src/: compilation.rs  compiler_plugin.rs  dependency_graph.rs  error_codes.rs  hxml.rs  integration_test.rs  lib.rs  logging.rs  pipeline.rs  pipeline_validation.rs  plugin.rs  simple_integration_test.rs
compiler/tests/: parser_stdlib_compat_tests.rs  test_enum_abstract.rs  test_for_in_compilation.rs  test_macro_system.rs  test_qualified_types.rs  test_stdlib_haxe_packages.rs  test_type_path_integration.rs
gpu/: Cargo.toml
gpu/src/: backend.rs  buffer.rs  device.rs  kernel_cache.rs  kernel_ir.rs  lazy.rs  lib.rs  ops.rs
parser/: Cargo.toml  GENERIC_METADATA.md  HAXE_V4_FEATURES.md  MIGRATION_TO_LOCATE.md  check_verbose_error.rs  test_new_parse.rs  test_nom_error.rs
parser/examples/: context_integration_demo.rs  debug_brace_error.rs  enhanced_errors_demo.rs  real_enhanced_errors_demo.rs  test_bytes_preprocess.rs  test_constraint_parsing.rs  test_diagnostics_integration.rs  test_enum_parsing.rs  test_iterator_preprocess.rs  test_metadata.rs  test_missing_brace_debug.rs  test_parser_context.rs  test_preprocessor_inline.rs  test_type_params.rs
parser/src/: context_integration.rs  custom_error.rs  enhanced_context.rs  enhanced_incremental_parser.rs  enhanced_parser.rs  error.rs  error_formatter.rs  error_syntax.rs  haxe_ast.rs  haxe_parser.rs  haxe_parser_decls.rs  haxe_parser_expr.rs  haxe_parser_expr2.rs  haxe_parser_expr3.rs  haxe_parser_types.rs  incremental_parser.rs  incremental_parser_enhanced.rs  lib.rs  position_parser.rs  preprocessor.rs  span_populator.rs
parser/tests/: debug_failing_syntax.rs  demo_enhanced_errors.rs  example_structural_extensions.hx  test_arrow_function_block.rs  test_ast_helpers.rs  test_basic_parsing.rs  test_catch_filters.rs  test_compiler_specific.rs  test_comprehensive_catch.rs  test_comprehensive_haxe.rs  test_conditional_compilation.rs  test_control_flow.rs  test_dollar_identifiers.rs  test_dotted_package_names.rs  test_enhanced_errors.rs  test_error_recovery.rs  test_expressions.rs  test_extractor_patterns.rs  test_forward_abstracts.rs  test_generic_metadata.rs  test_generic_metadata_comprehensive.rs  test_import_aliases.rs  test_import_hx.rs  test_literals.rs  test_macro_comprehensive.rs  test_math_inline_conditional.rs  test_metadata_on_expressions.rs  test_metadata_params.rs  test_module_fields.rs  test_multiple_catch.rs  test_multitype_abstract.rs  test_native_paths.rs  test_null_coalescing.rs  test_preprocess_comments.rs  test_recursive_type_constraints.rs  test_regex_literals.rs  test_span_tracking.rs  test_star_imports_with_exclusions.rs  test_type_declarations.rs  test_type_expressions.rs  (+3 more)
runtime/: CC_FEATURES.md  Cargo.toml  build.rs
runtime/examples/: test_math_functions.rs  test_tcc_direct.rs
runtime/src/: anon_object.rs  box_runtime.rs  concurrency.rs  ereg.rs  (+17 more)
(+368 files in other folders)
