[workspace]
members = [
    "parser",
    "compiler",
    "diagnostics",
    "source_map",
    "runtime"
]

[package]
name = "rayzor"
version = "0.1.0"
edition = "2021"

[dependencies]
parser = { path = "parser" }
compiler = { path = "compiler" }
clap = { version = "4.5", features = ["derive"] }




[[bin]]
name = "debug_map_test"
path = "debug_tests/debug_map_test.rs"

[[bin]]
name = "debug_pattern_test"
path = "debug_tests/debug_pattern_test.rs"

[[bin]]
name = "debug_simple_pattern"
path = "debug_tests/debug_simple_pattern.rs"

[[bin]]
name = "debug_switch_test"
path = "debug_tests/debug_switch_test.rs"

[[bin]]
name = "debug_comprehension_test"
path = "debug_tests/debug_comprehension_test.rs"

[[bin]]
name = "debug_using_test"
path = "debug_tests/debug_using_test.rs"

[[bin]]
name = "debug_successful_test"
path = "debug_tests/debug_successful_test.rs"

[[bin]]
name = "debug_type_parsing"
path = "debug_tests/debug_type_parsing.rs"

[[bin]]
name = "debug_class_parsing"
path = "debug_tests/debug_class_parsing.rs"

[[bin]]
name = "demo_enhanced_errors"
path = "parser/demo_enhanced_errors.rs"

[[bin]]
name = "debug_if_test"
path = "debug_tests/debug_if_test.rs"

[[bin]]
name = "debug_while_for_test"
path = "debug_tests/debug_while_for_test.rs"

[[bin]]
name = "test_simple_parser"
path = "debug_tests/test_simple_parser.rs"

[[bin]]
name = "test_incremental_parser"
path = "debug_tests/test_incremental_parser.rs"

[[bin]]
name = "test_minimal_if"
path = "debug_tests/test_minimal_if.rs"

[[bin]]
name = "test_debug_if"
path = "debug_tests/test_debug_if.rs"

[[bin]]
name = "test_semicolon"
path = "debug_tests/test_semicolon.rs"

[[bin]]
name = "test_exact_spacing"
path = "debug_tests/test_exact_spacing.rs"

[[bin]]
name = "test_multiline_if"
path = "debug_tests/test_multiline_if.rs"

[[bin]]
name = "test_compressed_vs_multiline"
path = "debug_tests/test_compressed_vs_multiline.rs"

[[bin]]
name = "test_modifiers_and_types"
path = "debug_tests/test_modifiers_and_types.rs"

[[bin]]
name = "test_else_if"
path = "debug_tests/test_else_if.rs"

[[bin]]
name = "test_switch_default"
path = "debug_tests/test_switch_default.rs"

[[bin]]
name = "test_switch_debug"
path = "debug_tests/test_switch_debug.rs"

[[bin]]
name = "test_switch_expression"
path = "debug_tests/test_switch_expression.rs"

[[bin]]
name = "test_default_simple"
path = "debug_tests/test_default_simple.rs"

[[bin]]
name = "test_case_plus_default"
path = "debug_tests/test_case_plus_default.rs"

[[bin]]
name = "test_switch_patterns"
path = "debug_tests/test_switch_patterns.rs"

[[bin]]
name = "test_method_calls"
path = "debug_tests/test_method_calls.rs"

[[bin]]
name = "test_complex_conditions"
path = "debug_tests/test_complex_conditions.rs"

[[bin]]
name = "test_array_access"
path = "debug_tests/test_array_access.rs"

[[bin]]
name = "test_operators"
path = "debug_tests/test_operators.rs"

[[bin]]
name = "test_parsing_hierarchy"
path = "debug_tests/test_parsing_hierarchy.rs"

[[bin]]
name = "test_compound_issues"
path = "debug_tests/test_compound_issues.rs"

[[bin]]
name = "test_if_conditions"
path = "debug_tests/test_if_conditions.rs"

[[bin]]
name = "test_exact_operators"
path = "debug_tests/test_exact_operators.rs"

[[bin]]
name = "test_special_expressions"
path = "debug_tests/test_special_expressions.rs"

[[bin]]
name = "test_assignment_debugging"
path = "debug_tests/test_assignment_debugging.rs"

[[bin]]
name = "test_tag_parsing"
path = "debug_tests/test_tag_parsing.rs"

[[bin]]
name = "test_assignment_simple"
path = "debug_tests/test_assignment_simple.rs"

[[bin]]
name = "test_just_if"
path = "debug_tests/test_just_if.rs"

[[bin]]
name = "test_exact_failure"
path = "debug_tests/test_exact_failure.rs"

[[bin]]
name = "test_string_interpolation"
path = "debug_tests/test_string_interpolation.rs"

[[bin]]
name = "test_nested_loops_debug"
path = "debug_tests/test_nested_loops_debug.rs"

[[bin]]
name = "test_return_debug"
path = "debug_tests/test_return_debug.rs"

[[bin]]
name = "test_while_condition_debug"
path = "debug_tests/test_while_condition_debug.rs"

[[bin]]
name = "test_multiple_return_debug"
path = "debug_tests/test_multiple_return_debug.rs"

[[bin]]
name = "test_complex_conditions_debug"
path = "debug_tests/test_complex_conditions_debug.rs"

[[bin]]
name = "test_unary_debug"
path = "debug_tests/test_unary_debug.rs"

[[bin]]
name = "test_minimal_negation"
path = "debug_tests/test_minimal_negation.rs"

[[bin]]
name = "test_parentheses_debug"
path = "debug_tests/test_parentheses_debug.rs"

[[bin]]
name = "test_operators_debug"
path = "debug_tests/test_operators_debug.rs"

[[bin]]
name = "comprehensive_haxe_test"
path = "debug_tests/comprehensive_haxe_test.rs"

[[bin]]
name = "realistic_comprehensive_test"
path = "debug_tests/realistic_comprehensive_test.rs"

[[bin]]
name = "test_gameengine_sections"
path = "debug_tests/test_gameengine_sections.rs"

[[bin]]
name = "test_increment_minimal"
path = "debug_tests/test_increment_minimal.rs"

[[bin]]
name = "test_multiple_increments"
path = "debug_tests/test_multiple_increments.rs"

[[bin]]
name = "test_decrement_only"
path = "debug_tests/test_decrement_only.rs"

[[bin]]
name = "test_unary_directly"
path = "debug_tests/test_unary_directly.rs"

[[bin]]
name = "test_tag_directly"
path = "debug_tests/test_tag_directly.rs"

[[bin]]
name = "test_abstract_typedef"
path = "debug_tests/test_abstract_typedef.rs"

[[bin]]
name = "test_container_class"
path = "debug_tests/test_container_class.rs"

[[bin]]
name = "test_container_narrow"
path = "debug_tests/test_container_narrow.rs"

[[bin]]
name = "test_ternary_issue"
path = "debug_tests/test_ternary_issue.rs"

[[bin]]
name = "test_switch_patterns_issue"
path = "debug_tests/test_switch_patterns_issue.rs"

[[bin]]
name = "test_enhanced_parser_features"
path = "debug_tests/test_enhanced_parser_features.rs"

[[bin]]
name = "test_error_recovery"
path = "debug_tests/test_error_recovery.rs"

[[bin]]
name = "test_comprehensive_error_patterns"
path = "debug_tests/test_comprehensive_error_patterns.rs"

[[bin]]
name = "test_parser_error_summary"
path = "debug_tests/test_parser_error_summary.rs"

[[bin]]
name = "test_for_in_keyvalue_debug"
path = "test_for_in_keyvalue_debug.rs"

[[bin]]
name = "test_for_in_compilation"
path = "test_for_in_compilation.rs"
