[workspace]
members = [
    "parser",
    "compiler",
    "diagnostics",
    "source_map",
    "runtime"
]
exclude = [
    "cranelift-fork"
]

[package]
name = "rayzor"
version = "0.1.0"
edition = "2021"

[dependencies]
parser = { path = "parser" }
compiler = { path = "compiler" }
clap = { version = "4.5", features = ["derive"] }
