[workspace]
members = [
    "parser",
    "compiler",
    "diagnostics",
    "source_map",
    "runtime"
]
exclude = [
    "cranelift-fork"
]

[package]
name = "rayzor"
version = "0.1.0"
edition = "2021"

[features]
llvm-backend = []

[dependencies]
parser = { path = "parser" }
compiler = { path = "compiler" }
rayzor-runtime = { path = "runtime" }
clap = { version = "4.5", features = ["derive"] }

# Workaround for LLVM optimizer bug that causes infinite loops in release builds
# when lowering TAST expressions. Using opt-level=2 instead of 3 prevents the bug.
[profile.release.package.compiler]
opt-level = 2
