[package]
name = "compiler"
version = "0.1.0"
edition = "2021"
description = "Rayzor Haxe Language Compiler"

[dependencies]
parser = { path = "../parser" }
source_map = { path = "../source_map" }
diagnostics = { path = "../diagnostics" }
serde = "1"
serde_json = "1"
fxhash = "0.2.1"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "validate_pipeline"
path = "src/bin/validate_pipeline.rs"

[[bin]]
name = "simple_test"
path = "src/bin/simple_test.rs"

[[bin]]
name = "test_undefined"
path = "src/bin/test_undefined.rs"

[[example]]
name = "test_integration_gaps"
path = "examples/test_integration_gaps.rs"

[[example]]
name = "test_null_safety"
path = "examples/test_null_safety.rs"


