[package]
name = "compiler"
version = "0.1.0"
edition = "2021"
description = "Rayzor Haxe Language Compiler"

[dependencies]
parser = { path = "../parser" }
source_map = { path = "../source_map" }
diagnostics = { path = "../diagnostics" }
rayzor-runtime = { path = "../runtime" }
rayzor-plugin = { path = "../plugin" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1.0", features = ["alloc"] }
fxhash = "0.2.1"
log = "0.4"
env_logger = "0.11"
indexmap = "2"

# Cranelift JIT compilation
cranelift = "0.109"
cranelift-module = "0.109"
cranelift-jit = "0.109"
cranelift-codegen = "0.109"
cranelift-frontend = "0.109"
cranelift-native = "0.109"
target-lexicon = "0.12"

# LLVM backend (optional, for Tier 3 optimization and AOT)
inkwell = { version = "0.4", features = ["llvm17-0"], optional = true}

[dev-dependencies]
walkdir = "2"

[features]
default = ["cranelift-backend"]
cranelift-backend = []
llvm-backend = ["inkwell"]
all-backends = ["cranelift-backend", "llvm-backend"]

[[bin]]
name = "validate_pipeline"
path = "src/bin/validate_pipeline.rs"

[[bin]]
name = "simple_test"
path = "src/bin/simple_test.rs"

[[bin]]
name = "test_undefined"
path = "src/bin/test_undefined.rs"

[[example]]
name = "test_integration_gaps"
path = "examples/test_integration_gaps.rs"

[[example]]
name = "test_null_safety"
path = "examples/test_null_safety.rs"


