[package]
name = "compiler"
version = "0.1.0"
edition = "2021"
description = "Rayzor Haxe Language Compiler"

[dependencies]
parser = { path = "../parser" }
source_map = { path = "../source_map" }
diagnostics = { path = "../diagnostics" }
rayzor-runtime = { path = "../runtime" }
rayzor-plugin = { path = "../plugin" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"  # For HDLL dynamic library loading
postcard = { version = "1.0", features = ["alloc"] }
fxhash = "0.2.1"
log = "0.4"
env_logger = "0.11"
indexmap = "2"
tracing = '0.1.44'
rayon = "1.10"  # Parallel iteration for background JIT compilation

# Cranelift JIT compilation - fork with ARM64 PLT fixes + MAP_JIT for 100% stability
cranelift = { git = "https://github.com/darmie/wasmtime", branch = "fix-plt-aarch64", package = "cranelift", features = ["jit", "module", "native"] }
cranelift-module = { git = "https://github.com/darmie/wasmtime", branch = "fix-plt-aarch64", package = "cranelift-module" }
cranelift-jit = { git = "https://github.com/darmie/wasmtime", branch = "fix-plt-aarch64", package = "cranelift-jit" }
cranelift-codegen = { git = "https://github.com/darmie/wasmtime", branch = "fix-plt-aarch64", package = "cranelift-codegen" }
cranelift-frontend = { git = "https://github.com/darmie/wasmtime", branch = "fix-plt-aarch64", package = "cranelift-frontend" }
cranelift-native = { git = "https://github.com/darmie/wasmtime", branch = "fix-plt-aarch64", package = "cranelift-native" }
target-lexicon = "0.12"

# LLVM backend (optional, for Tier 3 optimization and AOT)
inkwell = { version = "0.4", features = ["llvm17-0"], optional = true}

[dev-dependencies]
walkdir = "2"

[features]
default = ["cranelift-backend"]
cranelift-backend = []
llvm-backend = ["inkwell"]
all-backends = ["cranelift-backend", "llvm-backend"]

[[bin]]
name = "validate_pipeline"
path = "src/bin/validate_pipeline.rs"

[[bin]]
name = "simple_test"
path = "src/bin/simple_test.rs"

[[bin]]
name = "test_undefined"
path = "src/bin/test_undefined.rs"

[[example]]
name = "test_integration_gaps"
path = "examples/test_integration_gaps.rs"

[[example]]
name = "test_null_safety"
path = "examples/test_null_safety.rs"

[[example]]
name = "test_core_types_e2e"
path = "examples/test_core_types_e2e.rs"

[[example]]
name = "test_std_string_simple"
path = "examples/test_std_string_simple.rs"

[[example]]
name = "test_dynamic_boxing"
path = "examples/test_dynamic_boxing.rs"

[[example]]
name = "test_class_boxing"
path = "examples/test_class_boxing.rs"

[[example]]
name = "test_dynamic_field_access"
path = "examples/test_dynamic_field_access.rs"
