[package]
name = "rayzor-runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
inventory = "0.3"
rayzor-plugin = { path = "../plugin" }
lazy_static = "1.4"
libc = "0.2"
chrono = "0.4"
log = "0.4"

[features]
default = []
runtime-safety-checks = []
panic-on-safety-violation = []

[profile.release]
opt-level = 3
lto = true
